# cube-world

./: Cargo.toml  Makefile.toml
.github/workflows/: rust.yml
assets/models/: basic_rock_low_poly.glb  great_ball_pokemon.glb  low-poly_stylized_axe_for_game..glb  low_poly_hard_edge_rock.glb  low_poly_rock.glb  low_poly_stone_block.glb  minecraft_block_assets.glb  pokeball.glb  stylized_low-poly_ak-47_rifle.glb  stylized_low-poly_christmas_gift.glb  stylized_low-poly_cleaver.glb  stylized_low-poly_dagger.glb  stylized_low-poly_jade_obelisk.glb  stylized_low-poly_sand_block.glb  stylized_low-poly_spear.glb  stylized_low-poly_stone_block.glb  stylized_low-poly_wood_crate.glb  stylized_low-poly_wood_floor.glb  stylized_low-poly_wood_metal_bucket.glb  stylized_low-poly_wood_metal_chest.glb  stylized_low-poly_wood_table.glb  stylized_low-poly_wooden_beam.glb  stylized_low-poly_wooden_pallet.glb  stylized_low_poly_hanpainted_crate.glb  stylized_material_test.glb
assets/shaders/: animate_shader.wgsl  electro_cube.wgsl  fast_dots.wgsl  grid.wgsl
assets/textures/: conv.py  crying_obsidian.png.mcmeta  desktop.ini  glow_lichen.png.mcmeta  magma.png.mcmeta  magma_n.png.mcmeta  nether_portal_n.png.mcmeta  old.png~  respawn_anchor_top.png.mcmeta  sculk.png.mcmeta  sculk_shrieker_can_summon_inner_top_n.png.mcmeta  sea_lantern.png.mcmeta  sea_lantern_n.png.mcmeta  soul_lantern_s.png.mcmeta
examples/fbm/: main.rs
examples/grass/: main.rs  util.rs
examples/map/: main.rs
src/: cubePlain.rs  customMaterial.rs  lib.rs  main.rs  many_cube.rs  npc.rs  player.rs  region.rs  util.rs
(+7 files in other folders)
