[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15"
simdnoise = "3.1.6"
avian3d = {version = "0.2.0", features = ["parallel", "simd"]}
smooth-bevy-cameras = "0.13.0"
bevy-tnua = "0.21"
bevy-tnua-avian3d = "0.2.0"
bevy-tnua-physics-integration-layer = "0.5.0"
rand = "0.8.5"
