[package]
name = "bevy_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.16"
simdnoise = "3.1.6"
smooth-bevy-cameras = "0.14.0"
rand = "0.8.5"
bevy_rapier3d = { version = "0.30", features = ["default"] }
bevy_obj = "0.16.1"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = "s"
